<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_list"
    android:id="@id/elegir_pelioplatid"
    tools:context=".ElegirpelioplatActivity">

    <ImageView
        android:id="@+id/img_logotipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-100dp"
        android:contentDescription="@string/logo_desc"
        app:srcCompat="@drawable/logoinicio"
        android:elevation="30dp"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="190dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/border_round"
        android:layout_margin="16dp"
        android:elevation="6dp">

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_elegirPlat"
            style="@style/PrimaryMaterialButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/str_elegirPlat"
            android:layout_gravity="center_horizontal"
            android:onClick="openPlat" />

        <Button
            android:id="@+id/btn_elegirPeli"
            style="@style/PrimaryMaterialButton"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:onClick="openPelis"
            android:text="@string/str_elegirPeli" />

        <TextView
            android:id="@+id/idVolverInicio"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:onClick="volverAtras"
            android:text="@string/str_cerrarsesion"
            android:textColor="@color/azulclarito"
            android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>