<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".GeneralplataformaActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/generalPlat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPlatform"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/addPlatformDescStr"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:onClick="platformAddRes"
            style="@style/addbutton"
            android:focusable="true"
            />
        <Button
            android:id="@+id/btn_volver_elegirpelioplat_dentrodeplat"
            android:layout_marginStart="35dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_volver"
            style="@style/PrimaryMaterialButton"
            android:onClick="volverAtras" />

        <Button
            android:id="@+id/btn_guardar_disp_plataforma"
            android:layout_marginStart="35dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_guardar"
            style="@style/PrimaryMaterialButton"
            android:onClick="guardarDisp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewPlataforma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>